--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.7.5",
     "@react-navigation/native": "^7.1.22",
@@ -16,6 +17,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
+    "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
