--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^7.6.8",
     "@reduxjs/toolkit": "^2.11.0",
     "expo": "~54.0.25",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
