--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reduxjs/toolkit": "^2.11.0",
     "expo": "~54.0.25",
     "expo-location": "~19.0.7",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.6.0",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
