--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.7.5",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/stack": "^7.6.8",
     "@reduxjs/toolkit": "^2.11.0",
-    "expo": "~54.0.25",
+    "expo": "~54.0.26",
     "expo-location": "~19.0.7",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
@@ -33,6 +34,7 @@
   },
   "private": true,
   "devDependencies": {
-    "babel-preset-expo": "^54.0.7"
+    "babel-preset-expo": "^54.0.7",
+    "expo-module-scripts": "^5.0.8"
   }
 }
