--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/stack": "^7.6.8",
     "@reduxjs/toolkit": "^2.11.0",
     "expo": "~54.0.26",
+    "expo-file-system": "~19.0.20",
     "expo-location": "~19.0.7",
+    "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
